fixed footer left and right alignment

--- a/sites/all/themes/creatrix/scss/style.scss
+++ b/sites/all/themes/creatrix/scss/style.scss
@@ -695,7 +695,7 @@
         list-style: none;
         margin: 0;
         padding: 0;
-        text-align: right;;
+        text-align: left;
 
         li{
             display: inline-block;
